tests/compile-fail/integration__integration__anm_consts__err_sprite_clash.snap
---
source: tests/integration/anm_consts.rs
expression: stderr
---
error: ambiguous value for enum const 'my_sprite'
   ┌─ <input>:8:15
   │
 8 │     sprites: {my_sprite: {x: 1.0, y: 1.0, w: 111.0, h: 111.0, id: 0}},
   │               ^^^^^^^^^ definition with value 0
   ·
15 │     sprites: {my_sprite: {x: 2.0, y: 2.0, w: 222.0, h: 220.0, id: 1}},
   │               ^^^^^^^^^ definition with value 1


